--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,42 +6,75 @@
 
 /* Shared Styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
-    width: 80%;
-    max-width: 1280px;
-    margin: 0 auto;
+  width: 80%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
-
+.btn {
+  font-size: 16px;
+  color: #ffffff;
+  padding: 12px 16px;
+  border-radius: 4px;
+  background-color: #30b868;
+  border: none;
+  font-weight: 600;
+}
 
 /* nav styles */
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 26px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 26px;
 }
 nav .logo {
-    margin: 16px 0px;
+  margin: 16px 0px;
 }
 nav .list {
-    display: flex;
-    align-items: center;
-    gap: 32px;
-    list-style: none;
-    font-size: 16px;
-    font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  list-style: none;
+  font-size: 16px;
+  font-weight: 500;
 }
-nav .btn {
-    font-size: 16px;
-    color:#FFFFFF;
-    padding: 12px 16px;
-    border-radius: 4px;
-    background-color: #30B868;
-    border: none;
-    font-weight: 600;
+
+/* hero banner styles */
+#banner-img {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.275)),
+    url("../assets/hero-bg.png");
+}
+.hero-banner {
+  padding-top: 80px;
+  padding-bottom: 135px;
+  text-align: center;
+  color: white;
+}
+.hero-banner h1 {
+  font-size: 60px;
+  font-weight: bold;
+  margin: 16px 0;
+}
+.hero-banner .color {
+  color: #30b868;
+}
+.hero-banner p {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 32px;
+  line-height: 28px;
+}
+.btn-2 {
+  font-weight: 500px;
+  padding: 8px 16px;
+  background-color: white;
+  color: #30b868;
+  border: none;
+  border-radius: 22px;
 }
