--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,7 +108,7 @@ nav .list {
   width: 322px;
   padding: 50px 24px;
   text-align: center;
-  box-shadow: 0 0 4px 0 #00000060;
+  box-shadow: 0 0 4px 0 #00000018;
   border-radius: 8px;
 }
 .card .circle {
@@ -130,4 +130,39 @@ nav .list {
 .card p {
   font-size: 14px;
   color: #627382;
+}
+
+/* brain section styles */
+#brain {
+  margin: 120px auto;
+}
+.brain-container {
+  display: flex;
+  gap: 60px;
+  align-items: center;
+}
+.brain-container h6 {
+  font-size: 16px;
+  color: #30b868;
+  margin-bottom: 16px;
+  font-weight: 400;
+}
+.brain-container h2 {
+  font-size: 42px;
+  margin-bottom: 16px;
+  color: #001931;
+  font-weight: bold;
+}
+.brain-container p {
+  font-size: 16px;
+  color: #627382;
+  margin-bottom: 36px;
+  line-height: 22px;
+}
+.brain-container li {
+  list-style: none;
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #001931;
+  font-weight: 500;
 }
