--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,10 @@
   background-color: #30b868;
   border: none;
   font-weight: 600;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #f95555;
 }
 
 /* nav styles */
@@ -49,8 +53,8 @@ nav .list {
 #banner-img {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.275)),
     url("../assets/hero-bg.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .hero-banner {
   padding-top: 80px;
@@ -73,14 +77,29 @@ nav .list {
   line-height: 28px;
 }
 .btn-2 {
+  display: flex;
+  margin: auto;
   font-weight: 500px;
   padding: 8px 16px;
   background-color: white;
   color: #30b868;
   border: none;
   border-radius: 22px;
+  cursor: pointer;
 }
-
+.btn-2:hover {
+  background-color: #f95555;
+  color: white;
+}
+.btn-2 img {
+  width: 16px;
+  margin-right: 5px;
+}
+.btn-3 {
+  background-color: #00193100;
+  margin-left: 10px;
+  border: 1px solid white;
+}
 /* notes section styles */
 #note {
   margin-top: 50px;
@@ -222,8 +241,8 @@ nav .list {
   font-weight: 400;
   margin-bottom: 16px;
 }
-.horizontal {
-  color: #001931;
+.horizontal hr {
+  border: 1px solid rgb(37, 47, 74);
   margin-bottom: 30px;
 }
 .small {
@@ -235,5 +254,3 @@ nav .list {
   text-align: center;
   padding-bottom: 30px;
 }
-
-               
